--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cloudinary": "^2.7.0",
     "ejs": "^3.1.10",
     "helmet": "^8.1.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
